--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #00162E;
     --fundo-senha: #00244D;
     --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --borda: #7fb69f;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
@@ -132,11 +132,11 @@ label {
 
 .fraca {
     width: 25%;
-    background-color: #E71B32;
+    background-color: #87cf84;
 }
 
 .media {
-    background-color: #faf6085d;
+    background-color:rgba(52, 116, 77, 0.36);
     width: 50%;
 }
 
